--- a/index.html
+++ b/index.html
@@ -43,16 +43,53 @@
             </li>
             <li>
                 <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                <p>Значимість цих проблем настільки очевидна, що реалізація ланових завдань</p>
+                <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань</p>
             </li>
         </ul>
     </section>
     <section>
         <h2>Чим ми займаємося</h2>
         <ul>
-            <li></li>
+            <li><img src="./images/box1.jpg" width="370" alt="code writing"></li>
+            <li><img src="./images/box2.jpg" width="370" alt="checking by smartphone"></li>
+            <li><img src="./images/box3.jpg" width="370" alt="desing"></li>
         </ul>
     </section>
+    <section>
+        <h2>Наша команда</h2>
+        <ul>
+            <li>
+                <img src="./images/teamcard1.jpg" width="270" alt="Igor rhoto">
+                <h3>Ігор Дем'яненко</h3>
+                <p>Product Designer</p>
+            </li>
+            <li>
+            <img src="./images/teamcard2.jpg" width="270" alt="Olga photo">
+            <h3>Ольга Рєпіна</h3>
+            <p>Frontend Developer</p>
+        </li>
+        <li>
+            <img src="./images/teamcard3.jpg" width="270" alt="Mykola photo">
+            <h3>Микола Тарасов</h3>
+            <p>Marketing</p>
+        </li>
+        <li>
+            <img src="./images/teamcard4.jpg" width="270" alt="Michael photo">
+            <h3>Михайло Єрмаков</h3>
+            <p>UI Designer</p>
+        </li>
+        </ul>
+    </section>
+    <footer>
+        <a href="/index.html" rel="WebStudio">WebStudio</a>
+        <address>
+            <ul>
+                <li><a href="" rel="address">м. Київ, пр-т Лесі Українки,26</a></li>
+                <li><a href="mailto:info@devstudio.com" rel="mail">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111" rel="telephone">+38 096 111 11 11</a></li>
+            </ul>
+        </address>
+    </footer>
     </main>    
 </body>
 </html>
