--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -13,187 +13,17 @@
         <ul>
           <li><a href="" rel="studio">Студія</a></li>
           <li><a href="" rel="portfolio">Портфоліо</a></li>
-          <!DOCTYPE html>
-          <html lang="en">
-            <head>
-              <meta charset="UTF-8" />
-              <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-              <meta
-                name="viewport"
-                content="width=device-width, initial-scale=1.0"
-              />
-              <title>Document</title>
-            </head>
-            <body>
-              <header>
-                <nav>
-                  <a href="./index.html" rel="WebStudio">WebStudio</a>
-                  <ul>
-                    <li><a href="" rel="studio">Студія</a></li>
-                    <li><a href="" rel="portfolio">Портфоліо</a></li>
-                    <li><a href="" rel="contacts">Контакти</a></li>
-                  </ul>
-                </nav>
-                <ul>
-                  <li>
-                    <a href="mailto:info@devstudio.com" rel="mail"
-                      >info@devstudio.com</a
-                    >
-                  </li>
-                  <li>
-                    <a href="tel:+3809611111111" rel="telephone"
-                      >+38 096 111 11 11</a
-                    >
-                  </li>
-                </ul>
-              </header>
-              <main>
-                <section>
-                  <h1>
-                    Ефективні рішення для <br />
-                    вашого бізнесу
-                  </h1>
-                  <button type="button">Замовти послугу</button>
-                </section>
-                <section>
-                  <h2>Our advantages</h2>
-                  <ul>
-                    <li>
-                      <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-                      <p>
-                        Ідейні міркування, і навіть початок повсякденної роботи
-                        з формування позиції.
-                      </p>
-                    </li>
-                    <li>
-                      <h3>ПУНКТУАЛЬНІСТЬ</h3>
-                      <p>
-                        Завдання організації, особливо рамки імісце навчання
-                        кадрів тягне у себе
-                      </p>
-                    </li>
-                    <li>
-                      <h3>ПЛАНУВАННЯ</h3>
-                      <p>
-                        Так само консультація з широким активом значною мірою
-                        зумовлює.
-                      </p>
-                    </li>
-                    <li>
-                      <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                      <p>
-                        Значимість цих проблем настільки очевидна, що реалізація
-                        планових завдань
-                      </p>
-                    </li>
-                  </ul>
-                </section>
-                <section>
-                  <h2>Чим ми займаємося</h2>
-                  <ul>
-                    <li>
-                      <img
-                        src="./images/box1.jpg"
-                        width="370"
-                        alt="code writing"
-                      />
-                    </li>
-                    <li>
-                      <img
-                        src="./images/box2.jpg"
-                        width="370"
-                        alt="checking by smartphone"
-                      />
-                    </li>
-                    <li>
-                      <img src="./images/box3.jpg" width="370" alt="desing" />
-                    </li>
-                  </ul>
-                </section>
-                <section>
-                  <h2>Наша команда</h2>
-                  <ul>
-                    <li>
-                      <img
-                        src="./images/teamcard1.jpg"
-                        width="270"
-                        alt="Igor rhoto"
-                      />
-                      <h3>Ігор Дем'яненко</h3>
-                      <p>Product Designer</p>
-                    </li>
-                    <li>
-                      <img
-                        src="./images/teamcard2.jpg"
-                        width="270"
-                        alt="Olga photo"
-                      />
-                      <h3>Ольга Рєпіна</h3>
-                      <p>Frontend Developer</p>
-                    </li>
-                    <li>
-                      <img
-                        src="./images/teamcard3.jpg"
-                        width="270"
-                        alt="Mykola photo"
-                      />
-                      <h3>Микола Тарасов</h3>
-                      <p>Marketing</p>
-                    </li>
-                    <li>
-                      <img
-                        src="./images/teamcard4.jpg"
-                        width="270"
-                        alt="Michael photo"
-                      />
-                      <h3>Михайло Єрмаков</h3>
-                      <p>UI Designer</p>
-                    </li>
-                  </ul>
-                </section>
-                <footer>
-                  <a href="/index.html" rel="WebStudio">WebStudio</a>
-                  <address>
-                    <ul>
-                      <li>
-                        <a href="" rel="address"
-                          >м. Київ, пр-т Лесі Українки,26</a
-                        >
-                      </li>
-                      <li>
-                        <a href="mailto:info@devstudio.com" rel="mail"
-                          >info@devstudio.com</a
-                        >
-                      </li>
-                      <li>
-                        <a href="tel:+380961111111" rel="telephone"
-                          >+38 096 111 11 11</a
-                        >
-                      </li>
-                    </ul>
-                  </address>
-                </footer>
-              </main>
-            </body>
-          </html>
           <li><a href="" rel="contacts">Контакти</a></li>
         </ul>
       </nav>
       <ul>
-        <li>
-          <a href="mailto:info@devstudio.com" rel="mail">info@devstudio.com</a>
-        </li>
-        <li>
-          <a href="tel:+3809611111111" rel="telephone">+38 096 111 11 11</a>
-        </li>
+        <li><a href="mailto:info@devstudio.com" rel="mail">info@devstudio.com</a></li>
+        <li><a href="tel:+3809611111111" rel="telephone">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
       <section>
-        <h1>
-          Ефективні рішення для <br />
-          вашого бізнесу
-        </h1>
+        <h1>Ефективні рішення для вашого бізнесу</h1>
         <button type="button">Замовти послугу</button>
       </section>
       <section>
@@ -201,46 +31,27 @@
         <ul>
           <li>
             <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p>
-              Ідейні міркування, і навіть початок повсякденної роботи з
-              формування позиції.
-            </p>
+            <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
           </li>
           <li>
             <h3>ПУНКТУАЛЬНІСТЬ</h3>
-            <p>
-              Завдання організації, особливо рамки імісце навчання кадрів тягне
-              у себе
-            </p>
+            <p>Завдання організації, особливо рамки імісце навчання кадрів тягне у себе</p>
           </li>
           <li>
             <h3>ПЛАНУВАННЯ</h3>
-            <p>
-              Так само консультація з широким активом значною мірою зумовлює.
-            </p>
+            <p>Так само консультація з широким активом значною мірою зумовлює.</p>
           </li>
           <li>
             <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p>
-              Значимість цих проблем настільки очевидна, що реалізація планових
-              завдань
-            </p>
+            <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань</p>
           </li>
         </ul>
       </section>
       <section>
         <h2>Чим ми займаємося</h2>
         <ul>
-          <li>
-            <img src="./images/box1.jpg" width="370" alt="code writing" />
-          </li>
-          <li>
-            <img
-              src="./images/box2.jpg"
-              width="370"
-              alt="checking by smartphone"
-            />
-          </li>
+          <li><img src="./images/box1.jpg" width="370" alt="code writing" /></li>
+          <li><img src="./images/box2.jpg" width="370" alt="checking by smartphone" /></li>
           <li><img src="./images/box3.jpg" width="370" alt="desing" /></li>
         </ul>
       </section>
@@ -274,13 +85,8 @@
         <address>
           <ul>
             <li><a href="" rel="address">м. Київ, пр-т Лесі Українки,26</a></li>
-            <li>
-              <a href="mailto:info@devstudio.com" rel="mail"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li>
-              <a href="tel:+380961111111" rel="telephone">+38 096 111 11 11</a>
+            <li><a href="mailto:info@devstudio.com" rel="mail">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111" rel="telephone">+38 096 111 11 11</a>
             </li>
           </ul>
         </address>
