--- a/index.html
+++ b/index.html
@@ -17,8 +17,12 @@
         </ul>
       </nav>
       <ul>
-        <li><a href="mailto:info@devstudio.com" rel="mail">info@devstudio.com</a></li>
-        <li><a href="tel:+3809611111111" rel="telephone">+38 096 111 11 11</a></li>
+        <li>
+          <a href="mailto:info@devstudio.com" rel="mail">info@devstudio.com</a>
+        </li>
+        <li>
+          <a href="tel:+3809611111111" rel="telephone">+38 096 111 11 11</a>
+        </li>
       </ul>
     </header>
     <main>
@@ -31,27 +35,46 @@
         <ul>
           <li>
             <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+            <p>
+              Ідейні міркування, і навіть початок повсякденної роботи з
+              формування позиції.
+            </p>
           </li>
           <li>
             <h3>ПУНКТУАЛЬНІСТЬ</h3>
-            <p>Завдання організації, особливо рамки імісце навчання кадрів тягне у себе</p>
+            <p>
+              Завдання організації, особливо рамки імісце навчання кадрів тягне
+              у себе
+            </p>
           </li>
           <li>
             <h3>ПЛАНУВАННЯ</h3>
-            <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+            <p>
+              Так само консультація з широким активом значною мірою зумовлює.
+            </p>
           </li>
           <li>
             <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань</p>
+            <p>
+              Значимість цих проблем настільки очевидна, що реалізація планових
+              завдань
+            </p>
           </li>
         </ul>
       </section>
       <section>
         <h2>Чим ми займаємося</h2>
         <ul>
-          <li><img src="./images/box1.jpg" width="370" alt="code writing" /></li>
-          <li><img src="./images/box2.jpg" width="370" alt="checking by smartphone" /></li>
+          <li>
+            <img src="./images/box1.jpg" width="370" alt="code writing" />
+          </li>
+          <li>
+            <img
+              src="./images/box2.jpg"
+              width="370"
+              alt="checking by smartphone"
+            />
+          </li>
           <li><img src="./images/box3.jpg" width="370" alt="desing" /></li>
         </ul>
       </section>
@@ -85,8 +108,13 @@
         <address>
           <ul>
             <li><a href="" rel="address">м. Київ, пр-т Лесі Українки,26</a></li>
-            <li><a href="mailto:info@devstudio.com" rel="mail">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111" rel="telephone">+38 096 111 11 11</a>
+            <li>
+              <a href="mailto:info@devstudio.com" rel="mail"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+380961111111" rel="telephone">+38 096 111 11 11</a>
             </li>
           </ul>
         </address>
