--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html" rel="WebStudio">WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
-          <li><a href="" rel="studio">Студія</a></li>
-          <li><a href="" rel="portfolio">Портфоліо</a></li>
-          <li><a href="" rel="contacts">Контакти</a></li>
+          <li><a href="">Студія</a></li>
+          <li><a href="">Портфоліо</a></li>
+          <li><a href="">Контакти</a></li>
         </ul>
       </nav>
       <ul>
         <li>
-          <a href="mailto:info@devstudio.com" rel="mail">info@devstudio.com</a>
+          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
         <li>
-          <a href="tel:+3809611111111" rel="telephone">+38 096 111 11 11</a>
+          <a href="tel:+3809611111111">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
@@ -103,22 +103,21 @@
           </li>
         </ul>
       </section>
+    </main>
       <footer>
-        <a href="/index.html" rel="WebStudio">WebStudio</a>
+        <a href="/index.html">WebStudio</a>
         <address>
           <ul>
-            <li><a href="" rel="address">м. Київ, пр-т Лесі Українки,26</a></li>
+            <li><a href="http://surl.li/cvmoc" target="_blank" rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки,26</a></li>
             <li>
-              <a href="mailto:info@devstudio.com" rel="mail"
-                >info@devstudio.com</a
+              <a href="mailto:info@devstudio.com">info@devstudio.com</a
               >
             </li>
             <li>
-              <a href="tel:+380961111111" rel="telephone">+38 096 111 11 11</a>
+              <a href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
           </ul>
         </address>
       </footer>
-    </main>
   </body>
 </html>
